# AI-Infra-Engineer-The-Silver-Path

./: .gitignore  CMakeLists.txt  README.md
leetcode_practice/: CMakeLists.txt
phase0_cmake_warmup/: CMakeLists.txt  main.cpp
phase0_cmake_warmup/include/: infra_utils.h
phase0_cmake_warmup/src/: infra_utils.cpp  main.cpp
phase1/: CMakeLists.txt
phase1/cmake_practice/: CMakeLists.txt
phase1/cmake_practice/compiler_identification/: CMakeLists.txt
phase1/cmake_practice/compiler_identification/src/: identify_compiler.cpp
phase1/cmake_practice/workflow_practice/: CMakeLists.txt
phase1/cmake_practice/workflow_practice/src/: main.cpp
