# This file is AI-generated.

# Phase 1 中转站配置
cmake_minimum_required(VERSION 3.18)
project(Phase1)

# 打印日志，方便在 VS Code 输出窗口查看挂载情况
message(STATUS ">>> Entering Phase 1")

# 1. 挂载你目前的练习目录
add_subdirectory(cmake_practice)

# 2. 预留：未来当你创建 MyVector 文件夹时，只需取消下方注释
# add_subdirectory(MyVector)

# 3. 预留：CSAPP 实验
# add_subdirectory(cache_lab)